20-kubernetes/03-replicated-pingdirectory/ping_replication.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    role: pingdataconsole
  name: pingdataconsole
spec:
  ports:
  - name: http
    port: 8080
  selector:
    role: pingdataconsole
---
apiVersion: v1
kind: Service
metadata:
  labels:
    role: pingdirectory
  name: pingdirectory
spec:
  clusterIP: None
  ports:
  - name: ldaps
    port: 636
  - name: ssl
    port: 443
  - name: ldap
    port: 389
  selector:
    role: pingdirectory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: pingdataconsole
  name: pingdataconsole
spec:
  replicas: 1
  selector:
    matchLabels:
      role: pingdataconsole
  template:
    metadata:
      labels:
        role: pingdataconsole
      name: pingdataconsole
    spec:
      containers:
      - image: pingidentity/pingdataconsole:edge
        name: pingdataconsole
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: 1.5Gi
          requests:
            cpu: "1"
            memory: 1.5Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    role: pingdirectory
  name: pingdirectory
spec:
  replicas: 2
  selector:
    matchLabels:
      role: pingdirectory
  serviceName: pingdirectory
  template:
    metadata:
      labels:
        role: pingdirectory
      name: pingdirectory
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: pingdirectory-environment-variables
        - secretRef:
            name: devops-secret
            optional: true
        image: pingidentity/pingdirectory:edge
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - /preStop.sh
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - /opt/liveness.sh
          initialDelaySeconds: 300
          periodSeconds: 30
        name: pingdirectory
        ports:
        - containerPort: 636
        - containerPort: 443
        - containerPort: 389
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - /opt/liveness.sh
        resources:
          limits:
            cpu: "2"
            memory: 2Gi
          requests:
            cpu: "2"
            memory: 2Gi
        volumeMounts:
        - mountPath: /opt/out
          name: out-dir
      terminationGracePeriodSeconds: 300
      volumes:
      - name: out-dir
        persistentVolumeClaim:
          claimName: out-dir
  volumeClaimTemplates:
  - metadata:
      name: out-dir
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
      storageClassName: pingdirectory-gp2
