20-kubernetes/03-replicated-pingdirectory/mskcc2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    role: pingdataconsole
  name: pingdataconsole
spec:
  ports:
  - name: https
    port: 8443
  selector:
    role: pingdataconsole
---
apiVersion: v1
kind: Service
metadata:
  labels:
    role: pingdirectory
  name: pingdirectory
spec:
  clusterIP: None
  ports:
  - name: ldaps
    port: 636
  - name: ssl
    port: 443
  - name: ldap
    port: 389
  selector:
    role: pingdirectory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: pingdataconsole
  name: pingdataconsole
spec:
  replicas: 1
  selector:
    matchLabels:
      role: pingdataconsole
  template:
    metadata:
      labels:
        role: pingdataconsole
      name: pingdataconsole
    spec:
      containers:
      - image: pingidentity/pingdataconsole:edge
        imagePullPolicy: Always
        name: pingdataconsole
        ports:
        - containerPort: 8443
        resources:
          limits:
            cpu: "1"
            memory: 1.5Gi
          requests:
            cpu: "1"
            memory: 1.5Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    role: pingdirectory
  name: pingdirectory
spec:
  replicas: 2
  selector:
    matchLabels:
      role: pingdirectory
  serviceName: pingdirectory
  template:
    metadata:
      labels:
        role: pingdirectory
      name: pingdirectory
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: pingdirectory-environment-variables
        - secretRef:
            name: devops-secret
            optional: true
        image: pingidentity/pingdirectory:edge
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - /preStop.sh
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - /opt/liveness.sh
          initialDelaySeconds: 300
          periodSeconds: 30
        name: pingdirectory
        ports:
        - containerPort: 636
        - containerPort: 443
        - containerPort: 389
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - /opt/liveness.sh
        resources:
          limits:
            cpu: "2"
            memory: 2Gi
          requests:
            cpu: "2"
            memory: 2Gi
      terminationGracePeriodSeconds: 300
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingdataconsole-ingress
  annotations:
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
  - hosts:
    - pingdataconsole-mskcc.ping-ps-aws.com
    secretName: tls-secret
  rules:
  - host: pingdataconsole-mskcc.ping-ps-aws.com
    http:
      paths:
        # This rule gives external access to the pingdirectory console
        - path: /console
          backend:
            serviceName: pingdataconsole
            servicePort: 8443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingdirectoryapi-ingress
  annotations:
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS           
spec:
  tls:
  - hosts:
    - pingdirectoryapi-mskcc.ping-ps-aws.com
    secretName: tls-secret
  rules:
  - host: pingdirectoryapi-mskcc.ping-ps-aws.com
    http:
      paths:
        # This rule gives external access to the pingdirectory console
        - path: /directory/v1
          backend:
            serviceName: pingdirectory
            servicePort: 443
